[tool.poetry]
name = "blank-app"
version = "0.1.0"
description = "Compare audio specs."
authors = ["Timothy <timothy@uptempo-global.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.42.1"
scipy = "^1.15.2"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
soundfile = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
